fix(offering): unset swiper default style to show overlap on mobile (#170)
The auto mode sets the width to 100% - but we want an overlapping effect.
Therefore we need to overwrite the built-in swiper styles and set the width back to auto

In addition, it also increases the space between the different sections on mobile like it's in the design

--- a/styles/includes/_offering.scss
+++ b/styles/includes/_offering.scss
@@ -74,6 +74,10 @@
 
 		position: relative;
 		z-index: 4;
+
+		.offering__slide {
+			width: auto;
+		}
 	}
 
 	&__title {
